update home and style

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -26,6 +26,9 @@ security:
             logout:
                 path: app_logout
 
+            # http_basic:
+            #     realm: Secured Area
+
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
